examples/failing/UIntNegative.purs
-- @shouldFailWith UIntOutOfRange

module Main where

n :: UInt
n =  -1234u
